# apps/api/src/app.controller.ts
@@ -1,15 +1,0 @@
-import { Controller, Get } from '@nestjs/common'
-import { ApiOkResponse, ApiTags } from '@nestjs/swagger'
-import { AppService } from './app.service'
-
-@ApiTags('Health')
-@Controller()
-export class AppController {
-  constructor(private readonly appService: AppService) {}
-
-  @Get('health')
-  @ApiOkResponse({ schema: { example: { status: 'ok' } } })
-  health() {
-    return this.appService.health()
-  }
-}
